@@ -1,0 +1,3 @@
+/.deps
+/Makefile
+/Makefile.in
