@@ -193,3 +193,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 	 usable by Fuse.
 20040402 libspectrum.h.in,tape.c: add libspectrum_tape_write() function.
 20040402 libspectrum.c: add capabilities for the +3e.
+20040408 Makefile.am,configure.in,myglib.c,myglib/{.cvsignore,Makefile.am}:
+	 move the glib replacement code into its own directory.
